--- a/css/layouts.css
+++ b/css/layouts.css
@@ -1,32 +1,40 @@
 
 body {
   width: 960px;
-  /* overflow: hidden; */
   margin: auto;
 }
+
 main {
 margin: auto;
+display: flex;
+flex-wrap: wrap;
+align-items: flex;
 }
+
 header {
   margin: auto;
   text-align: center;
 }
+
+h1 {
+  font-size: 30px;
+}
+
 img {
-  width: 200px;
+  width: 100%;
+  height: 200px;
   border: black 2px solid;
 }
 
 section {
-  width: 200px;
-  height: 250px;
-  float: left;
+  width: 25%;
+  height: 280px;
+  /* float: left; */
   margin: 25px;
+  margin-top: 55px;
 }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   text-align: center;
   margin-top: 20px;
