--- a/css/layouts.css
+++ b/css/layouts.css
@@ -1,10 +1,11 @@
 
 body {
-  width: 960px;
+  width: 360px;
   margin: auto;
 }
 
 main {
+  width: 100%;
 margin: auto;
 display: flex;
 flex-wrap: wrap;
@@ -17,18 +18,18 @@ header {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 15px;
 }
 
 img {
   width: 100%;
-  height: 200px;
+  height: 100px;
   border: black 2px solid;
 }
 
 section {
   width: 25%;
-  height: 280px;
+  height: 25%;
   /* float: left; */
   margin: 25px;
   margin-top: 55px;
@@ -40,6 +41,98 @@ footer {
   margin-top: 20px;
   padding-bottom: 10px;
 }
+
+
+@media (min-width: 750px){
+  body {
+    width: 800px;
+    margin: auto;
+  }
+  
+  main {
+    width: 100%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex;
+  }
+  
+  header {
+    margin: auto;
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 30px;
+  }
+  
+  img {
+    width: 100%;
+    height: 200px;
+    border: black 2px solid;
+  }
+  
+  section {
+    width: 25%;
+    height: 280px;
+    /* float: left; */
+    margin: 25px;
+    margin-top: 55px;
+  }
+  
+  footer {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (min-width: 1100px){
+  body {
+    width: 960px;
+    margin: auto;
+  }
+  
+  main {
+    width: 100%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex;
+  }
+  
+  header {
+    margin: auto;
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 30px;
+  }
+  
+  img {
+    width: 100%;
+    height: 200px;
+    border: black 2px solid;
+  }
+  
+  section {
+    width: 25%;
+    height: 280px;
+    /* float: left; */
+    margin: 25px;
+    margin-top: 55px;
+  }
+  
+  footer {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    padding-bottom: 10px;
+  }
+}
+
 
 
 /* body{
