--- a/css/modules.css
+++ b/css/modules.css
@@ -1,6 +1,20 @@
 
 h1 {
   font-family: 'Potta One', cursive;
+}
+section {
+  background-color: rgb(250, 179, 179);
+}
+@media (min-width: 750px){
+  section {
+    background-color: rgb(147, 235, 159);
+  }
+}
+@media (min-width: 1000px) {
+  section{
+background-color: rgb(189, 189, 238);
+  } 
+}
 /* 
 h1{
   font-family: 'Courier New', Courier, monospace;
